added email validation

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     {% endwith %}
     <form action='/process' method='post'>
         Name:<input type="text" name="name">
+        Email:<input type="text" name="email">
         <input type="submit" value="Submit">
     </form>
 </body>
